<resources>
    <string name="app_name">GroceryStore-Android</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">Log in</string>
    <string name="second_fragment_label">Create Account</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>

    <string name="new_customer_hint1">Username</string>
    <string name="new_customer_hint2">Password</string>
    <string name="new_customer_hint3">Email</string>
    <string name="new_customer_hint4">Address</string>
    <string name="new_customer_button">Sign Up</string>
    <string name="login_button">Log in</string>
    <string name="create_account_button">Create Account</string>

    <string-array name="account_array">
        <item>Customer</item>
        <item>Employee</item>
    </string-array>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>