<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SecondFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/error2"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:visibility="gone"
            android:text=""
            android:textColor="#FF0000"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/new_customer_username"
            android:hint="@string/new_customer_hint1"/>

        <EditText
            android:id="@+id/new_customer_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/new_customer_hint2"
            android:minHeight="48dp" />

        <EditText
            android:id="@+id/new_customer_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/new_customer_hint3"
            android:minHeight="48dp" />

        <EditText
            android:id="@+id/new_customer_address"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/new_customer_hint4"
            android:minHeight="48dp" />

        <Button
            android:id="@+id/button_second"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:text="@string/new_customer_button"/>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>